feat: Complete messaging platform implementation
- Restructure frontend components into organized modules
- Implement real-time chat with WebSocket integration
- Add comprehensive media handling (audio, video, files)
- Build group management with admin controls
- Enhance backend with message status tracking and user presence
- Add GIF integration and improved file services
- Implement responsive UI with animations and dark theme

Production-ready messaging platform with full feature set.