@@ -2,10 +2,11 @@ package com.yaplab.security;
 
 import com.yaplab.user.User;
 import org.springframework.security.core.GrantedAuthority;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
 
 import java.util.Collection;
-import java.util.Collections;
+import java.util.List;
 
 /**
  * Custom UserDetails implementation for Spring Security
@@ -24,6 +25,14 @@ public class AppUserDetails implements UserDetails {
         this.user = user;
     }
 
+    public Long getId() {
+        return user.getId();
+    }
+
+    public User getUser() {
+        return user;
+    }
+
     /**
      * Returns the authorities granted to the user.
      * In this implementation, no specific authorities are assigned.
@@ -31,7 +40,7 @@ public class AppUserDetails implements UserDetails {
      */
     @Override
     public Collection<? extends GrantedAuthority> getAuthorities() {
-        return Collections.emptyList();
+        return List.of(new SimpleGrantedAuthority("ROLE_USER"));
     }
 
     @Override
